remove flags from impact categories
