# src/methods/lca.model.ts
@@ -32,7 +32,6 @@ export interface LCIAresults {
   ecotox_seawaterc_fresh_water: number;
   ecotox_natsoilc_fresh_water: number;
   ecotox_agrsoilc_fresh_water: number;
-  cf_flag_ecotox: number;
   hh_urban_air_cancer: number;
   hh_urban_air_noncanc: number;
   hh_rural_air_cancer: number;
@@ -45,6 +44,4 @@ export interface LCIAresults {
   hh_natural_soil_noncanc: number;
   hh_agric_soil_cancer: number;
   hh_agric_soil_noncanc: number;
-  cf_flag_hh_carcinogenic: number;
-  cf_flag_hh_noncarcinogenic: number;
 }
